2009-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, preferences.py: Added new gconf keys:
	  window_keep_below and window_non_movable (issue #1).

2009-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, preferences.py, config.py, gphotoframe.glade:
	  Added new option for sticky mode.
	* preferences.py, flickr.py: Embedded Flickr api_key.
	* lib/plugins/__init__.py, photoliststore.py, preferences.py:
	  Code refactoring. __init__.py manages plug-in tokens.

2009-04-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Added support for F-Spot tags.
	* gphotoframe.glade: Removed combobox initial text.

2009-04-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translation.
	* setup.py, lib/__init__.py, po/: Added gettext support.
	* setup.py, MANIFEST.in: Initial import.
	* glade.py, constants.py: Removed glade.py and added constants.py.
	* gphotoframe: Try to load local modules at first.
	* gphotoframe.glade: Modified positions of labels.

2009-04-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Divided in modules.

2009-04-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Code refactoring (Removed global variables).

2009-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.1 release.
	* gphotoframe: Added a blank image and checking the F-Spot database.
	  Use threading for os.walk.  Fixed minor bugs.
	* gphotoframe, gphotoframe.glade: Modified source names.

2009-04-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe (MakePhoto.rotate): EXIF.process_file ->
	  pixbuf.get_option. Droped depend on EXIF.py
	* gphotoframe, gphotoframe.glade: Initial import.